# skinnydiffing

./: .gitignore  README_api_example.md  codebase.md  pyproject.toml
examples/cloudera_hive/: run_diff.py
src/lightweight_table_diff/: __init__.py  __main__.py  api.py  core.py  resolver.py  runner.py
src/skinnydiffing/: __init__.py  __main__.py  api.py  config.py  core.py  dimensions.py  normalisers.py  resolver.py  result.py  runner.py
tests/: test_api.py  test_core.py  test_dimensions.py  test_integration.py  test_normalisers.py
