[project]
name = "lightweight-table-diff"
version = "1.0.0"
description = "Cell-level table diffing with a Polars engine and Narwhals dataframe input support."
requires-python = ">=3.11.1"
dependencies = [
    "narwhals>=1.0",
    "polars>=1.0",
    "polars-checkpoint",
    "pyyaml",
]

[dependency-groups]
dev = [
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pyrefly>=1.0.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ty>=0.0.44",
]

[project.optional-dependencies]
readstat = ["polars-readstat"]
examples = ["pyspark", "raz_client", "types-boto3[s3]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 90
src = ["src"]

exclude = [
    ".venv",
    ".pytest_cache",
    "tests",
    "**/__init__.py",
]

[tool.ruff.lint]
select = ["E", "W", "F", "B", "UP", "I", "SIM", "C90", "S", "PTH", "RUF"]

[tool.ruff.format]
docstring-code-format = true

[tool.pyrefly]

project-includes = ["src", "examples"]
project-excludes = [
    "**/tests",
    "**/.venv",
]

[tool.ty.src]
include = ["src", "examples"]
exclude = [
    "**/tests/",
    "**/.venv/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
